--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>vue-chartjs-demo</title>
+    <title>MyKahawa</title>
   </head>
   <body>
     <div id="app"></div>
+    <p>placeholder</p>
     <!-- built files will be auto injected -->
   </body>
 </html>
