--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-title: IPBES documents
+title: MyKahawa
 layout: base
 ---
 
@@ -19,31 +19,6 @@ layout: base
             </div>
           </div>
         </div>
-<!---
-        <div class="col-md-4">
-          <div class="card bg-light mb-3">
-            <div class="card-body">
-              <h5 class="card-title">Inline amendments</h5>
-
-              <p>Changes applied by amendments, viewed inline</p>
-
-              <a class="btn btn-primary" href="/akn/un/act/conv/imo/1997/marpol-annex-vi/eng@2020-03-01/diff">View demo</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-md-4">
-          <div class="card bg-light mb-3">
-            <div class="card-body">
-              <h5 class="card-title">Side-by-side amendments</h5>
-
-              <p>Changes applied by amendments, viewed side-by-side</p>
-
-              <a class="btn btn-primary" href="/side-diff">View demo</a>
-            </div>
-          </div>
-        </div>
---->
       </div>
     </div>
   </section>
