--- a/index.html
+++ b/index.html
@@ -4,22 +4,152 @@ layout: base
 ---
 
 <div id="main-page">
-  <section class="places py-5">
+  <section id="about">
     <div class="container">
-      <div class="row">
-
-        <div class="col-md-4">
-          <div class="card bg-light mb-3">
-            <div class="card-body">
-              <h5 class="card-title">Plenary reports, resolutions, decisions</h5>
-
-              <p>Getting started</p>
-
-              <a class="btn btn-primary" href="/un-ipbes/eng/">View demo</a>
-            </div>
+       <div class="row text-center">
+          <div class="col-12">
+             <h2 class="h1">
+                What we do
+             </h2>
+             <div class="u-h-4 u-w-50 bg-primary rounded mt-4 u-mb-40 mx-auto"></div>
           </div>
-        </div>
-      </div>
+          <div class="col-md-4 u-mt-30">
+             <div class="bg-white px-4 px-md-5 py-5 u-h-100p rounded box-shadow-v2">
+                <div class="u-w-90 u-h-90 u-flex-center bg-green text-white rounded-circle m-auto">
+                   <span class="icon icon-Book u-fs-42"></span>
+                </div>
+                <h4 class="u-fs-26 my-4">
+                   Kenya Coffee Directory
+                </h4>
+                <p>
+                   Most up to date directory of coffee producers and authorized dealers in Kenya.
+                </p>
+             </div>
+          </div>
+          <div class="col-md-4 u-mt-30">
+             <div class="bg-white px-4 px-md-5 py-5 u-h-100p rounded box-shadow-v2">
+                <div class="u-w-90 u-h-90 u-flex-center bg-black text-white rounded-circle m-auto">
+                   <span class="icon icon-Briefcase u-fs-42"></span>
+                </div>
+                <h4 class="u-fs-26 my-4">
+                   Transactions
+                </h4>
+                <p>
+                   Transaction listing of coffee sales at the Nairobi Coffee Exchange from February 2015.
+                </p>
+             </div>
+          </div>
+          <div class="col-md-4 u-mt-30">
+             <div class="bg-white px-4 px-md-5 py-5 u-h-100p rounded box-shadow-v2">
+                <div class="u-w-90 u-h-90 u-flex-center bg-red text-white rounded-circle m-auto">
+                   <span class="icon icon-Chart u-fs-42"></span>
+                </div>
+                <h4 class="u-fs-26 my-4">
+                   Analytics and Custom reports
+                </h4>
+                <p>
+                   Overview of the performance of the Nairobi Coffee Exchange over time and custom reports.
+                </p>
+             </div>
+          </div>
+       </div>
     </div>
-  </section>
+ </section>
+
+ <section class="pb-0" class="bg-gray-v1">
+   <div class="container">
+      <div class="row">
+         <div class="col-lg-8 m-auto text-center">
+            <h2 class="h1">
+               What we have
+            </h2>
+            <div class="u-h-4 u-w-50 bg-primary rounded mt-4 u-mb-40 mx-auto"></div>
+            <p class="u-mt-60">
+               We offer detailed transaction reports from the Nairobi Coffee Exchange, analysis of these transactions, and combine it with other sources of data in order to best provide the information that Kenyan coffee stakeholders need to maximize their revenue through appropriate production management and leveraged negotiation power Moreover, we provide an analysis of transaction reports and maintain a directory of coffee dealers, producers, and marketers to foster traceability, transparency, and networking on our website. Our database is updated at the end of each auction.
+            </p>
+            <div class="row">
+               <div class="col-md-4 mt-5">
+                  <a href="/directory/producers"><h4 class="u-fs-48 u-fw-400 text-primary mb-0">{{ num_producers }}</h4></a>
+                  <p class="u-fs-20 u-ff-dosis">Growers <br> (Cooperatives, estates and farms)</p>
+               </div>
+               <div class="col-md-4 mt-5">
+                  <a href="/directory/dealers"><h4 class="u-fs-48 u-fw-400 text-primary mb-0">{{ num_dealers }}</h4></a>
+                  <p class="u-fs-20 u-ff-dosis">Buyers <br> (List of authorized dealers)</p>
+               </div>
+               <div class="col-md-4 mt-5">
+                  <a href="/transactions/list"><h4 class="u-fs-48 u-fw-400 text-primary mb-0">{{ num_transactions }}</h4></a>
+                  <p class="u-fs-20 u-ff-dosis">Transactions <br> (Since February 2015)  </p>
+               </div>
+            </div>
+         </div>
+      </div>
+   </div>
+</section>
+
+ <section id="faq" class="bg-gray-v1">
+   <div class="container">
+      <div class="row">
+         <div class="col-lg-6 m-auto text-center">
+            <h2 class="h1">
+               Frequently Asked Questions
+            </h2>
+            <div class="u-h-4 u-w-50 bg-primary rounded mt-4 u-mb-40 mx-auto"></div>
+         </div>
+      </div>
+      <div class="row">
+         <div class="col-12 mt-4">
+            <div id="accordion" role="tablist" class="bg-white box-shadow-v3">
+               <div class="accordion__faq">
+                  <a class="accordion__title p-4" data-toggle="collapse" href="#acc1">
+                  <i class="fa fa-angle-down mr-3"></i>
+                  Where does MyKahawa get coffee data from?
+                  </a>
+                  <div id="acc1" class="collapse show" role="tabpanel" data-parent="#accordion">
+                     <div class="accordion__text">
+                       MyKahawa collects, cleans and stores transaction reports from the Nairobi Coffee Exchange at the end of each sale. The Nairobi Coffee Exchange (NCE) is a central coffee auction where an estimated 80% of Kenya's coffee is traded. The NCE is mandated to manage Kenya's central coffee auction. Trading at NCE usually takes place on Tuesdays at Wakulima House, Haile Sellasie Avenue in Nairobi. The data used in this website is made available by the NCE at the end of each sale
+                     </div>
+                  </div>
+               </div>
+               <div class="accordion__faq">
+                  <a class="accordion__title p-4"data-toggle="collapse" href="#acc2">
+                  <i class="fa fa-angle-down mr-3"></i>
+                  Can I buy coffee from MyKahawa?
+                  </a>
+                  <div id="acc2" class="collapse" role="tabpanel" data-parent="#accordion">
+                     <div class="accordion__text">
+                        We are a data and information services provider. We are not licensed or involved in the trade in coffee. We can put you in touch with authorized and reliable dealers who can ship coffee to you.
+                     </div>
+                  </div>
+               </div>
+               <div class="accordion__faq">
+                  <a class="accordion__title p-4"data-toggle="collapse" href="#acc3">
+                  <i class="fa fa-angle-down mr-3"></i>
+                  Why is my cooperative/estate/dealer not listed?
+                  </a>
+                  <div id="acc3" class="collapse" role="tabpanel" data-parent="#accordion">
+                     <div class="accordion__text">
+                        Reference was made to the Kenya Coffee Directory report produced by the Kenya Coffee Traders Association in 2012. We are maintaining the directory by updating and adding records based on transactions taking place at the Nairobi Coffee Exchange.
+                     </div>
+                  </div>
+               </div>
+               <div class="accordion__faq">
+                  <a class="accordion__title p-4"data-toggle="collapse" href="#acc4">
+                  <i class="fa fa-angle-down mr-3"></i>
+                  Where can I get more details about trade in Kenyan Coffee?
+                  </a>
+                  <div id="acc4" class="collapse" role="tabpanel" data-parent="#accordion">
+                     <div class="accordion__text">
+                       <a href="http://nairobicoffeeexchange.co.ke" target="_blank">Nairobi Coffee Exchange</a><br>
+                       <a href="https://www.kari.org/" target="_blank">Kenya Agricultural Research Institute</a><br>
+                       <a href="http://www.kenyacoffee.co.ke/" target="_blank">Kenya Coffee Traders Association</a><br>
+                       <a href="https://kencaffee.coop" target="_blank">Kenya Co-operative Coffee Exporters (KCCE)</a>    
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>
+   </div>
+</section>
+
 </div>
