add mailchimp subscription. changes to home page

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ layout: base
                </p>
             </div>
             <div class="col-lg-12 mx-auto mt-5">
-               <img class="" src=img/logo_on_coffee.png" alt="">
+               <img class="" src="img/logo_on_coffee.png" alt="MyKahawa logo on roasted coffee">
             </div>
          </div>
       </div>
@@ -62,10 +62,10 @@ layout: base
                    <span class="icon icon-Chart u-fs-42"></span>
                 </div>
                 <h4 class="u-fs-26 my-4">
-                   Analytics and Custom reports
+                   Analytics
                 </h4>
                 <p>
-                   Overview of the performance of the Nairobi Coffee Exchange over time and custom reports.
+                   Overview of the performance of the Nairobi Coffee Exchange over time.
                 </p>
              </div>
           </div>
@@ -116,11 +116,13 @@ layout: base
       <div class="row">
          <div class="col-12 mt-4 bg-white box-shadow-v3">
             <h3 class="accordion__title p-4">Where does MyKahawa get coffee data from?</h3>
-            <p>MyKahawa collects, cleans and stores transaction reports from the Nairobi Coffee Exchange at the end of each sale. The Nairobi Coffee Exchange (NCE) is a central coffee auction where an estimated 80% of Kenya's coffee is traded. The NCE is mandated to manage Kenya's central coffee auction. Trading at NCE usually takes place on Tuesdays at Wakulima House, Haile Sellasie Avenue in Nairobi. The data used in this website is made available by the NCE at the end of each sale </p>
+            <p>The Nairobi Coffee Exchange (NCE) is mandated to manage Kenya's central coffee auction. Trading at NCE usually takes place on Tuesdays at Wakulima House, Haile Sellasie Avenue in Nairobi. The data used in this website is made available by the NCE at the end of each sale </p>
+            <h3 class="accordion__title p-4">Are you affiliated with the Nairobi Coffee Exchange?</h3>
+            <p>No.</p>
             <h3 class="accordion__title p-4">Can I buy coffee from MyKahawa?</h3>
             <p>No. We provide data and information services. We are not licensed or involved in the trade of coffee.</p>
             <h3 class="accordion__title p-4">Why is my cooperative/estate/dealer not listed?</h3>
-            <p>Reference was made to the Kenya Coffee Directory report produced by the Kenya Coffee Traders Association in 2012. We are maintaining the directory by updating and adding records based on transactions taking place at the Nairobi Coffee Exchange. Please contact info@mykahawa.org If you wish to add/edit/remove your cooperative/factory/estate</p>
+            <p>We developed our directory based on transactions that took place at the Nairobi Coffee Exchange from Jan 2015 to Sep 2020 and the Kenya Coffee Directory report produced by the Kenya Coffee Traders Association in 2012. Please contact info@mykahawa.org If you wish to add/edit/remove your cooperative/factory/estate</p>
             <h3 class="accordion__title p-4">Where can I get more details about trade in Kenyan Coffee?</h3>
             <ul>
                   <li><a href="http://nairobicoffeeexchange.co.ke" target="_blank">Nairobi Coffee Exchange</li></a>
