fix home page links

--- a/index.html
+++ b/index.html
@@ -86,15 +86,15 @@ layout: base
             </p>
             <div class="row">
                <div class="col-md-4 mt-5">
-                  <a href="/directory/producers"><h4 class="u-fs-48 u-fw-400 text-primary mb-0">2784</h4></a>
+                  <a href="/growers.html"><h4 class="u-fs-48 u-fw-400 text-primary mb-0">2784</h4></a>
                   <p class="u-fs-20 u-ff-dosis">Growers <br> (Cooperatives, estates and farms)</p>
                </div>
                <div class="col-md-4 mt-5">
-                  <a href="/directory/dealers"><h4 class="u-fs-48 u-fw-400 text-primary mb-0">84</h4></a>
+                  <a href="/dealers.html"><h4 class="u-fs-48 u-fw-400 text-primary mb-0">84</h4></a>
                   <p class="u-fs-20 u-ff-dosis">Buyers <br> (List of authorized dealers)</p>
                </div>
                <div class="col-md-4 mt-5">
-                  <a href="/transactions/list"><h4 class="u-fs-48 u-fw-400 text-primary mb-0">131,384</h4></a>
+                  <a href="/transactions.html"><h4 class="u-fs-48 u-fw-400 text-primary mb-0">131,384</h4></a>
                   <p class="u-fs-20 u-ff-dosis">Transactions <br> (Jan 2015 - Sep 2020)  </p>
                </div>
             </div>
