--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@ layout: base
                   <li><a href="https://www.kari.org/" target="_blank">Kenya Agricultural Research Institute</a></li>
                   <li><a href="http://www.kenyacoffee.co.ke/" target="_blank">Kenya Coffee Traders Association</a></li>
                   <li><a href="https://kencaffee.coop" target="_blank">Kenya Co-operative Coffee Exporters (KCCE)</a> </li>
+                  <li><a href="https://www.technoserve.org/region/kenya" target="_blank">Technoserve</a></li>
             </ul>     
          </div>
       </div>
