--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@ layout: base
             <ul>
                   <li><a href="http://nairobicoffeeexchange.co.ke" target="_blank">Nairobi Coffee Exchange</li></a>
                   <li><a href="https://www.kari.org/" target="_blank">Kenya Agricultural Research Institute</a></li>
+                  <li><a href="https://kcpa.co.ke" target="_blank">Kenya Coffee Producers Association</a></li>
                   <li><a href="http://www.kenyacoffee.co.ke/" target="_blank">Kenya Coffee Traders Association</a></li>
                   <li><a href="https://kencaffee.coop" target="_blank">Kenya Co-operative Coffee Exporters (KCCE)</a> </li>
                   <li><a href="https://www.technoserve.org/region/kenya" target="_blank">Technoserve</a></li>
