--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@ layout: base
                   <li><a href="https://kcpa.co.ke" target="_blank">Kenya Coffee Producers Association</a></li>
                   <li><a href="http://www.kenyacoffee.co.ke/" target="_blank">Kenya Coffee Traders Association</a></li>
                   <li><a href="https://kencaffee.coop" target="_blank">Kenya Co-operative Coffee Exporters (KCCE)</a> </li>
+                  <li><a href="https://farmdrive.co.ke" target="_blank">Farm Drive: smallholder farmer credit</a></li>
                   <li><a href="https://www.technoserve.org/region/kenya" target="_blank">Technoserve</a></li>
             </ul>     
          </div>
