--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ layout: base
             <p>No. We provide data and information services. We are not licensed or involved in the trade of coffee.</p>
             <h3 class="accordion__title p-4">Why is my cooperative/estate/dealer not listed?</h3>
             <p>We developed our directory based on transactions that took place at the Nairobi Coffee Exchange from Jan 2015 to Sep 2020 and the Kenya Coffee Directory report produced by the Kenya Coffee Traders Association in 2012. Please contact info@mykahawa.org If you wish to add/edit/remove your cooperative/factory/estate</p>
-            <h3 class="accordion__title p-4">Where can I get more details about trade in Kenyan Coffee?</h3>
+            <h3 class="accordion__title p-4">Where can I get more details about trade in Kenyan coffee?</h3>
             <ul>
                   <li><a href="http://nairobicoffeeexchange.co.ke" target="_blank">Nairobi Coffee Exchange</li></a>
                   <li><a href="https://www.kari.org/" target="_blank">Kenya Agricultural Research Institute</a></li>
