--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: base
          <div class="row text-center">
             <div class="col-lg-10 mx-auto u-pt-80">
                <h1 class="display-4 u-fw-600 text-red">
-                  Database of Kenyan coffee trade and key actors
+                  Raising the profile and visibility of Kenyan coffee
                </h1>
                <p class="u-fs-22 u-lh-1_8 py-4">
                   MyKahawa is a business analytics and market intelligence platform that provides greater transparency and visibility into the Kenya Coffee market and industry.
@@ -126,13 +126,15 @@ layout: base
             <p>We developed our directory based on transactions that took place at the Nairobi Coffee Exchange from Jan 2015 to Sep 2020 and the Kenya Coffee Directory report produced by the Kenya Coffee Traders Association in 2012. Please contact info@mykahawa.org If you wish to add/edit/remove your cooperative/factory/estate</p>
             <h3 class="accordion__title p-4">Where can I get more details about trade in Kenyan coffee?</h3>
             <ul>
-                  <li><a href="http://nairobicoffeeexchange.co.ke" target="_blank">Nairobi Coffee Exchange</li></a>
+                  <li><a href="http://nairobicoffeeexchange.co.ke" target="_blank">Nairobi Coffee Exchange</a>: Manages the coffee central auction in Kenya</li>
+                  <li><a href="https://coffee.agricultureauthority.go.ke/" target="_blank">Agriculture and Food Authority - Coffee directorate</a>: Regulation, market research, technical and advisory services. Applications for coffee dealer license</li>
                   <li><a href="https://www.kari.org/" target="_blank">Kenya Agricultural Research Institute</a></li>
                   <li><a href="https://kcpa.co.ke" target="_blank">Kenya Coffee Producers Association</a></li>
                   <li><a href="http://www.kenyacoffee.co.ke/" target="_blank">Kenya Coffee Traders Association</a></li>
                   <li><a href="https://kencaffee.coop" target="_blank">Kenya Co-operative Coffee Exporters (KCCE)</a> </li>
-                  <li><a href="https://farmdrive.co.ke" target="_blank">Farm Drive: smallholder farmer credit</a></li>
-                  <li><a href="https://www.technoserve.org/region/kenya" target="_blank">Technoserve</a></li>
+                  <li><a href="https://farmdrive.co.ke" target="_blank">Farm Drive</a>: Smallholder farmer credit</li>
+                  <li><a href="https://www.technoserve.org/region/kenya" target="_blank">Technoserve</a>: In 2008, TechnoServe and the Bill and Melinda Gates Foundation launched the Coffee Initiative, a project to improve the livelihoods of smallholder coffee farmers in Ethiopia, Kenya, Rwanda and Tanzania</li>
+                  <li><a href="https://www.kedovo.org/english/our-projects/sustainable-coffee-farming/" target="_blank">Kedovo coffee project</a>: KEDOVO e.V. is a registered non-profit organization founded in Germany in 2013. It's Kenyan chapter is Kedovo CBO. It's mission is to encourage an economic and agricultural rural development through education and trainings in order to promote the social welfare of the communities in Central Kenya</li>
             </ul>     
          </div>
       </div>
