--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@ layout: base
                   <li><a href="https://www.kari.org/" target="_blank">Kenya Agricultural Research Institute</a></li>
                   <li><a href="https://kcpa.co.ke" target="_blank">Kenya Coffee Producers Association</a></li>
                   <li><a href="http://www.kenyacoffee.co.ke/" target="_blank">Kenya Coffee Traders Association</a></li>
+                  <li><a href="https://afca.coffee/" target="_blank">African Fine Coffees Association</a>: International specialty coffee related news and events</li>
                   <li><a href="https://kencaffee.coop" target="_blank">Kenya Co-operative Coffee Exporters (KCCE)</a> </li>
                   <li><a href="https://farmdrive.co.ke" target="_blank">Farm Drive</a>: Smallholder farmer credit</li>
                   <li><a href="https://www.technoserve.org/region/kenya" target="_blank">Technoserve</a>: In 2008, TechnoServe and the Bill and Melinda Gates Foundation launched the Coffee Initiative, a project to improve the livelihoods of smallholder coffee farmers in Ethiopia, Kenya, Rwanda and Tanzania</li>
