--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ layout: base
                {% include ko-fi.html %}
             </div>
             <div class="col-lg-12 mx-auto mt-5">
-               <img class="" src="img/logo_on_coffee.png" alt="MyKahawa logo on roasted coffee">
+               <img class="" src="theme/img/logo_on_coffee.png" alt="MyKahawa logo on roasted coffee">
             </div>
          </div>
       </div>
