--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@ redirect_from: "/events/"
                   <p class="u-fs-20 u-ff-dosis">Growers <br> (Cooperatives, estates and farms)</p>
                </div>
                <div class="col-md-4 mt-5">
-                  <a href="/dealers.html"><h4 class="u-fs-48 u-fw-400 text-primary mb-0">84</h4></a>
-                  <p class="u-fs-20 u-ff-dosis">Buyers <br> (List of authorized dealers)</p>
+                  <a href="/dealers.html"><h4 class="u-fs-48 u-fw-400 text-primary mb-0">157</h4></a>
+                  <p class="u-fs-20 u-ff-dosis">Dealers <br> (List of authorized dealers)</p>
                </div>
                <div class="col-md-4 mt-5">
                   <a href="/transactions.html"><h4 class="u-fs-48 u-fw-400 text-primary mb-0">131,384</h4></a>
